--- a/examples_local_js/example01.html
+++ b/examples_local_js/example01.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="../files/external/SQLike.js"></script>
 <script type="text/javascript" src="../files/alat.js"></script>
 <script type="text/javascript" src="../files/alat_gui_classic.js"></script>
-<script type="text/javascript" src="../files/alat_server.js"></script>
+<script type="text/javascript" src="../files/alat_local_server.js"></script>
 <script type="text/javascript" src="example01.js"></script>
 </head>
 <body>
